Match-id-18f13814f4dbbb4ebbf13db47ff0f1d14f91594c

--- a/api/external/api-cert.yaml
+++ b/api/external/api-cert.yaml
@@ -221,6 +221,12 @@ paths:
           schema:
             type: file
         - in: formData
+          name: dhParam
+          description: 密钥交换文件
+          required: false
+          schema:
+            type: file
+        - in: formData
           name: serverKey
           description: 服务私钥
           required: false
