Match-id-732f06a6505cbc18135672240fefd009fdfebc51

--- a/api/external/api-sftp.yaml
+++ b/api/external/api-sftp.yaml
@@ -67,10 +67,11 @@ paths:
           type: integer
           format: int32
         - name: ip
-          in: formData
+          in: body
           required: false
           description: 标准备份服务ip
-          type: string
+          schema:
+            type: string
       responses:
         '200':
           description: OK
