--- a/api/external/api-cluster.yaml
+++ b/api/external/api-cluster.yaml
@@ -154,6 +154,10 @@ paths:
       deprecated: false
   /v1/clusters:
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
       tags:
         - '${clusters-api}'
       summary: 查询集群信息
@@ -182,9 +186,7 @@ paths:
           required: false
           type: integer
           maximum: 200.0
-          exclusiveMaximum: false
           minimum: 0.0
-          exclusiveMinimum: false
           format: int32
           x-example: 10
         - name: startPage
@@ -193,7 +195,6 @@ paths:
           required: false
           type: integer
           minimum: 0.0
-          exclusiveMinimum: false
           format: int32
           x-example: 0
         - name: statusList
@@ -214,6 +215,14 @@ paths:
             type: integer
             format: int32
           collectionFormat: multi
+        - name: roleList
+          in: query
+          required: false
+          description: 集群角色：【0：复制目标集群；2：管理目标集群；不选，所有集群类型】
+          type: array
+          items:
+            type: integer
+            format: int32
       responses:
         '200':
           description: OK
@@ -229,7 +238,6 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
     post:
       tags:
         - '${clusters-api}'
@@ -1289,7 +1297,6 @@ definitions:
         description: 逻辑用量，单位KB
     title: ClusterStorageVo
   ClustersInfoVo:
-    type: object
     properties:
       clusterId:
         type: integer
@@ -1316,6 +1323,13 @@ definitions:
       username:
         type: string
         description: 集群用户名
+      role:
+        type: integer
+        format: int32
+        description: 0：复制集群；2：管理集群
+      enableManage:
+        type: boolean
+        description: 当role为2时，true：管理集群；false：被管理集群
     title: ClustersInfoVo
   CopyReplicationImportParam:
     type: object
@@ -1606,12 +1620,6 @@ definitions:
           - USER_DEFINED_TYPE
     title: StorageUserInfo
   TargetClusterRequest:
-    type: object
-    required:
-      - clusterName
-      - ip
-      - port
-      - username
     properties:
       clusterName:
         type: string
@@ -1633,12 +1641,19 @@ definitions:
         description: 集群port
         minimum: 1.0
         maximum: 65535.0
-        exclusiveMinimum: false
-        exclusiveMaximum: false
       username:
         type: string
         description: 集群用户名
+      role:
+        type: integer
+        format: int32
+        description: '0:复制集群；2：管理集群'
     title: TargetClusterRequest
+    required:
+      - clusterName
+      - ip
+      - port
+      - username
   TargetClusterVo:
     type: object
     properties:
