--- a/api/internal/api-copy-catalog-internal.yaml
+++ b/api/internal/api-copy-catalog-internal.yaml
@@ -1131,6 +1131,9 @@ definitions:
       detail:
         type: string
         description: 副本详情
+      name:
+        type: string
+        description: 副本名
     title: CopyInfoSchema
     required:
       - deletable
