Match-id-16aa32f2ec2239b4b202e51227503a11a2990f7f

--- a/api/external/api-protected-object.yaml
+++ b/api/external/api-protected-object.yaml
@@ -520,11 +520,13 @@ definitions:
         maxLength: 36
         title: Sla Id
         type: string
-    required:
-      - sla_id
-      - action
+      copy_name:
+        type: string
+        description: 副本名
     title: ManualBackupReq
-    type: object
+    required:
+      - action
+      - sla_id
   ModifyProtectionSubmitReq:
     properties:
       ext_parameters:
