Match-id-58bf5f356ecbf0c2d37e72ea80b868aa61dc61ca

--- a/api/external/api-globa-search.yaml
+++ b/api/external/api-globa-search.yaml
@@ -176,6 +176,9 @@ definitions:
         type: integer
         format: int64
         description: gn范围：大于等于
+      generatedBy:
+        type: string
+        description: 副本生成方式
   FileLevelSearchResponse:
     properties:
       total:
