--- a/api/internal/api-protection-access-framework-internal.yaml
+++ b/api/internal/api-protection-access-framework-internal.yaml
@@ -468,6 +468,43 @@ paths:
         - Authorization:
             - global
       deprecated: false
+  '/v1/internal/jobs/{jobId}/action/update-status':
+    put:
+      x-impact-subsystem: 不影响
+      x-access-port: 30081
+      x-auth-required: 'N'
+      x-public-api: 'N'
+      tags:
+        - job-controller
+      summary: 更新任务状态
+      operationId: updateJobStatusUsingPUT
+      consumes:
+        - application/json
+      parameters:
+        - name: jobId
+          in: path
+          required: true
+          type: string
+          description: 更新任务的ID
+        - name: jobStatusRequest
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/UpdateJobStatusRequest'
+          description: 更新任务状态模型
+      responses:
+        '200':
+          description: 更新成功
+          schema:
+            type: string
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
 securityDefinitions:
   Authorization:
     type: apiKey
@@ -1290,3 +1327,84 @@ definitions:
       target_type:
         type: string
     title: TargetDetail
+  UpdateJobStatusRequest:
+    description: 更新任务状态数据模型
+    x-impact-subsystem: 不影响
+    x-access-port: 30081
+    x-auth-required: 'N'
+    x-public-api: 'N'
+    properties:
+      jobRequestId:
+        type: string
+        description: 任务请求Id
+      progress:
+        type: integer
+        format: int32
+        description: 任务执行进度
+      status:
+        type: integer
+        format: int32
+        description: 任务状态
+      speed:
+        type: integer
+        format: int64
+        description: 任务执行速度
+      jobLogs:
+        type: array
+        items:
+          $ref: '#/definitions/JobLog'
+        description: 任务日志
+      additionalStatus:
+        type: string
+        description: 任务执行附加状态
+      extendField:
+        type: object
+        description: >-
+          扩展字段，dme上报备份任务数据量添加在此字段中，缩减前数据量key为dataBeforeReduction，缩减后数据量key为dataAfterReduction，值类型均为double，单位为KB。
+        example:
+          dataBeforeReduction: 1024
+          dataAfterReduction: 1024
+        x-impact-subsystem: 不影响
+        x-access-port: 30081
+        x-auth-required: 'N'
+        x-public-api: 'N'
+    required:
+      - jobRequestId
+      - status
+  JobLog:
+    description: 任务日志
+    x-impact-subsystem: 不影响
+    x-access-port: 30081
+    x-auth-required: 'N'
+    x-public-api: 'N'
+    properties:
+      logInfo:
+        type: string
+        description: 任务日志信息
+      logInfoParam:
+        type: array
+        items:
+          type: string
+        description: 任务日志参数
+      logTimestamp:
+        type: integer
+        format: int64
+        description: 开始时间
+      logDetail:
+        type: integer
+        format: int64
+        description: 任务详情附加信息（失败时为错误码）
+      logDetailInfo:
+        type: array
+        items:
+          type: string
+        description: 任务详情的详细打印
+      logDetailParam:
+        type: array
+        items:
+          type: string
+        description: 任务详情附加参数
+      logLevel:
+        type: integer
+        format: int32
+        description: 任务级别
